fixed overflow-x bugs and checkbox / radio / switch bugs

--- a/scss/inputs/button.scss
+++ b/scss/inputs/button.scss
@@ -13,6 +13,12 @@
     line-height: $component-line-height;
     z-index: $component-z-index;
     box-shadow: $box-shadow;
+    max-width: 100%;
+    overflow: auto;
+
+    > span {
+        max-width: 100%;
+    }
 
     &:not(.align-left):not(.align-right) {
         @include justify-content(center);
