--- a/scss/variables/layout.scss
+++ b/scss/variables/layout.scss
@@ -36,3 +36,5 @@ $container-large: rem(700px);
 
 $transition-time: .4s;
 $transition-timing: ease-in-out;
+
+$flex-space-base: $spacer / 4;
